--- a/users/templates/checkout.html
+++ b/users/templates/checkout.html
@@ -1,1 +1,92 @@
-tools
+{% extends 'base.html'%}
+{% load static %}
+{% block content%}
+{% load humanize %}
+
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="box-element">
+
+				<a  class="btn btn-outline-dark" href="{% url 'update_subscription' subscription.id %}">&#x2190; <strong>Go Back</strong> </a>
+
+				<br>
+				<br>
+				<table class="table">
+					<tr>
+						<th><h5>Total:<strong> Rwf {{subscription.get_total_amount|intcomma}}</strong></h5></th>
+						<th>
+							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'confirm' subscription.id %}">confirm</a>
+							<a  style="float:right; margin:5px;" class="btn btn-danger" href="{% url 'cancel' subscription.id %}">cancel</a>
+						</th>
+					</tr>
+				</table>
+
+			</div>
+
+			<br>
+			<div class="box-element">
+				<div class="cart-row">
+					<div style="flex:2"></div>
+					<div style="flex:2"><strong>Item</strong></div>
+					<div style="flex:1"><strong>Price</strong></div>
+					<div style="flex:1"><strong>Quantity</strong></div>
+					<div style="flex:1"><strong>Total</strong></div>
+				</div>
+				{% for item in my_tools %}
+				<div class="cart-row">
+					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+					<div style="flex:2"><p>{{item.ToolID.Title}}</p></div>
+					<div style="flex:1"><p>Rwf {{item.ToolID.Amount|intcomma}}</p></div>
+					<div style="flex:1">
+						<p class="quantity">{{item.quantity}}</p>
+						<div class="quantity">
+							<img data-product="{{item.id}}" data-action="add" class="chg-quantity update-cart" src="{% static  'img/arrow-up.png' %}">
+					
+							<img data-product="{{item.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'img/arrow-down.png' %}">
+						</div>
+					</div>
+					<div style="flex:1"><p>${{item.get_total|intcomma}}</p></div>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+	</div>
+
+ <script>
+        var updateBtns = document.getElementsByClassName('update-cart')
+
+for (i = 0; i < updateBtns.length; i++) {
+	updateBtns[i].addEventListener('click', function(){
+		var productId = this.dataset.product
+		var action = this.dataset.action
+		console.log('productId:', productId, 'Action:', action)
+		updateUserOrder(productId, action)
+		
+	})
+}
+
+function updateUserOrder(productId, action){
+	console.log('User is authenticated, sending data...')
+
+		var url = '/update_item/'
+
+		fetch(url, {
+			method:'POST',
+			headers:{
+				'Content-Type':'application/json',
+				'X-CSRFToken':csrftoken,
+			}, 
+			body:JSON.stringify({'productId':productId, 'action':action})
+		})
+		.then((response) => {
+		   return response.json();
+		})
+		.then((data) => {
+		    location.reload()
+		});
+}
+
+
+    </script>
+
+{% endblock content%}
