--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -38,6 +38,7 @@
                                         <tr>
                                             <th class="text-left">ID</th>
                                             <th>Customer</th>
+                                            <th>Subscribed in</th>
                                             <th>From</th>
                                             <th>Total amount</th>
                                             <th>Action</th>
@@ -49,6 +50,7 @@
                                     <tr>
                                             <td><a class="btn-link" href="#">{{sub.id}}</a></td>
                                             <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
+                                            <td>{{sub.Category.Title}}</td>
                                             <td>{{sub.From}}</td>
                                             <td>{{sub.get_total_amount|intcomma}} Rwf</td>
                                             <td> <a class="btn-link" href="{% url 'quotation' sub.id%}"><button class="btn btn-success">View</button></a></td>
