--- a/users/templates/add_customer.html
+++ b/users/templates/add_customer.html
@@ -78,6 +78,7 @@
                                                     </select>  
                                                 </div>
                                             </div>
+                                            <div class="col-sm-12">
                                                  <div class="form-group">
                                                     <label class="control-label">Users</label>
                                                     <select class="form-control" name="user_id"required>
