--- a/users/templates/users.html
+++ b/users/templates/users.html
@@ -41,7 +41,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    {% for User in page_obj %}
+                                    {% for user in page_obj %}
                                     <tr>
                                             <td><a class="btn-link" href="#">{{user.id}}</a></td>
                                             <td>{{user.email}}</td>
