--- a/users/templates/add_subscription.html
+++ b/users/templates/add_subscription.html
@@ -32,7 +32,7 @@
                                             <div class="col-sm-6">
                                                     <div class="form-group">
                                                     <label class="control-label">Service</label>
-                                                    <select class="form-control" name="customer" required>
+                                                    <select class="form-control" name="category" required>
                                                        <option value="Select meter number">Select Service</option> 
                                                     {% for category in categories%}
 
