--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -8,7 +8,7 @@
     <title>Water Access</title>
 
 
-    <!--STYLESHEET-->
+    <!--STYLESHEET--> 
     <!--=================================================-->
 
     <!--Open Sans Font [ OPTIONAL ]-->
@@ -136,6 +136,9 @@
     <link href="{% static "plugins/pace/pace.min.css" %}" rel="stylesheet">
     <script src="{% static "plugins/pace/pace.min.js" %}"></script>
 
+
+    <!--Chart JS [ REQUIRED ]-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js"></script>
 
     <!--jQuery [ REQUIRED ]-->
     <script src="{% static "js/jquery-2.2.4.min.js" %}"></script>
