--- a/users/templates/website/about.html
+++ b/users/templates/website/about.html
@@ -8,23 +8,24 @@
 <!--<![endif]-->
 
 <head>
+{% load static %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
-	<title>Be</title>
+	<title>Water Access Rwanda</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="{% static "web/images/favicon.ico" %}">
 	<!-- FONTS -->
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Sora:100,200,300,400,400italic,500,600,700,700italic,900'>
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,400italic,500,600,700,700italic,900'>
 	<!-- CSS -->
-	<link rel='stylesheet' href='css/global.css'>
+	<link rel='stylesheet' href="{% static "web/css/global.css" %}">
 	<link rel='stylesheet' href='css/el_demo.css'>
-	<link rel='stylesheet' href='css/structure.css'>
+	<link rel='stylesheet' href="{% static "web/css/structure.css" %}">
 	<link rel='stylesheet' href='css/finance2.css'>
 	<link rel='stylesheet' href='css/insurance3.css'>
 	<link rel='stylesheet' href='css/scooterrental.css'>
